# drumkv1

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Makefile.in  README  README.cmake  TODO  configure.ac  drumkv1.1  drumkv1.fr  drumkv1.pro  drumkv1.spec.in  drumkv1_jack.pro  drumkv1_lv2.pro  drumkv1_lv2ui.pro  drumkv1_ui.pro
debian/: changelog  control  copyright  drumkv1-common.install  drumkv1-jack.install  drumkv1-lv2.install  drumkv1.install  rules
rpm/: drumkv1.spec
src/: CMakeLists.txt  cmake_config.h.in  config.h.cmake  drumkv1.cpp  drumkv1.desktop  drumkv1.desktop.in  drumkv1.h  drumkv1.qrc  drumkv1_config.cpp  drumkv1_config.h  drumkv1_control.cpp  drumkv1_control.h  drumkv1_controls.cpp  drumkv1_controls.h  drumkv1_filter.h  drumkv1_formant.cpp  drumkv1_formant.h  drumkv1_fx.h  drumkv1_jack.cpp  drumkv1_jack.h  drumkv1_list.h  drumkv1_lv2.cpp  drumkv1_lv2.h  drumkv1_lv2ui.cpp  drumkv1_lv2ui.h  drumkv1_nsm.cpp  drumkv1_nsm.h  drumkv1_param.cpp  drumkv1_param.h  drumkv1_preset.cpp  drumkv1_preset.h  drumkv1_programs.cpp  drumkv1_programs.h  drumkv1_ramp.h  drumkv1_resampler.cpp  drumkv1_resampler.h  drumkv1_reverb.h  drumkv1_sample.cpp  drumkv1_sample.h  drumkv1_sched.cpp  (+59 more)
src/appdata/: drumkv1.appdata.xml  org.rncbc.drumkv1.desktop  org.rncbc.drumkv1.metainfo.xml  org.rncbc.drumkv1.xml
src/drumkv1.lv2/: drumkv1.ttl  drumkv1_ui-qt5.ttl  drumkv1_ui-win32.ttl  drumkv1_ui.ttl  manifest-win32.ttl  manifest.ttl
src/man1/: drumkv1.1  drumkv1.fr.1
src/mimetypes/: drumkv1.xml  org.rncbc.drumkv1.xml
